overflow on x fixed

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -142,3 +142,7 @@ padding-bottom: 0px;
 background-repeat: no-repeat;
 background-size: 100% 100%;
 }
+.row {
+margin-left: 0px!important;
+margin-right: 0px!important;
+}
